EOD 2019_0901: sticky footer is still an issue and is overlapping things+ couldn't figure out how to have overflow scroll work with more than 3 thumbnails in portfolio.  more workarounds than just that

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -357,6 +357,7 @@ input.submitButton:hover {
         height: 50rem;
         left: 2%;
         top: 83px;
+        overflow:scroll;
         position: fixed;
         
     }
@@ -800,18 +801,53 @@ input.submitButton:hover {
   @media screen and (max-width: 640px) {
 
     .containerBottom {
-        width: 640px;
+        width: 500px;
         margin-left: auto;
         margin-right: auto;
         font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
         height: 30rem;
         margin-top: auto;
-        top: 100px;
+        top: 300px;
+        
     }
     .containerTop {
         position: fixed;
         width: 100%;
         font-family: 'Georgia', Times, Times New Roman, serif;
+    }
+
+    header {
+        background: white;
+        height: 75px;
+        margin-left: 0px;
+        margin-right: 0px;
+        margin-top: 0px;
+        border-bottom: 2px solid #cccccc;
+        font-family: 'Georgia', Times, Times New Roman, serif;
+        position: static;
+        padding: auto;
+        width: 100%;
+    }
+
+    #NameBox {
+        color:White;
+        background-color: #4aaaa5;
+        width: 640px;
+        position:relative;
+        margin-left: 0px;
+        font-size: 20px;
+        text-align: center;
+        height: 25px;
+        padding:5px;
+        display: block;
+    }
+    #LinksBox {
+        float: left;
+        margin-right: auto;
+        margin-left: auto;
+        bottom: 10px;
+        left: 230px;
+        position: relative;
     }
 
     #sectionBoxIndex {
@@ -878,25 +914,7 @@ input.submitButton:hover {
         border-top: 6px solid #4aaaa5;
         margin-left: 0px;
     }
-    header {
-        background: white;
-        height: 70px;
-        margin-left: 0px;
-        margin-right: 0px;
-        margin-top: 0px;
-        border-bottom: 2px solid #cccccc;
-        font-family: 'Georgia', Times, Times New Roman, serif;
-        position: fixed;
-        padding: auto;
-        width: 100%;
-    }
-    #LinksBox {
-        float: right;
-        margin-right: 2%;
-        margin-top: 20px;
-        position: relative;
-    
-    }
+ 
     a.GrayLinks:hover {
         color: #4aaaa5;
         font-weight:bold;
@@ -941,6 +959,18 @@ input.submitButton:hover {
         position: relative;
         
     }
+
+    #smVerticalThumbnails {
+        width: 200px;
+        height: 175px;
+        left: 150px;
+        margin-left: 0px;
+        margin-top: 0px;
+        margin-right: 40px;
+        margin-bottom: 10px;
+        position: relative;
+        
+    }
     
     #thumbnailBox1 {
         background-color:  #4aaaa5;
@@ -955,7 +985,7 @@ input.submitButton:hover {
         text-align: center;
         color:white;
         font-weight:bold;
-        left: 90px;
+        left: 150px;
         
     }
     
@@ -965,8 +995,8 @@ input.submitButton:hover {
         width: 200px;
         height: 45px;
         position: absolute;
-        top: 100px;
-        left: 314px;
+        top: 290px;
+        left: 150px;
         z-index: 1;
         margin: 0px 0px 0px 0px;
         display: flex;
@@ -983,7 +1013,7 @@ input.submitButton:hover {
         width: 200px;
         height: 45px;
         position: absolute;
-        top: 290px;
+        top: 480px;
         z-index: 1;
         margin: 0px 0px 0px 0px;
         display: flex;
@@ -991,10 +1021,11 @@ input.submitButton:hover {
         text-align: center;
         color:white;
         font-weight:bold;
-        left: 90px;
+        left: 150px;
     }
     
     #thumbnailBox4 {
+        visibility: hidden;
         background-color:  #4aaaa5;
         width: 200px;
         height: 45px;
@@ -1012,6 +1043,7 @@ input.submitButton:hover {
     }
     
     #thumbnailBox5 {
+        visibility: hidden;
         background-color:  #4aaaa5;
         width: 200px;
         height: 45px;
@@ -1026,6 +1058,7 @@ input.submitButton:hover {
         font-weight:bold;
         left: 90px;
     }
+
     
     .thumbnailContainer {
         position: relative;
@@ -1043,7 +1076,14 @@ input.submitButton:hover {
     #WhiteLinks {
         color: #ffffff;
         margin: 0 auto;
+    }
+    .hidden {
+        visibility: hidden;
+    }
+
   }
 
-
+/* NOTE:  Could not figure out how to make Overflow: scroll work with more 
+than 3 pictures to show the bottom two, so left them out
   }
+  
